syntax = "proto3";

package invoker;
option go_package = "./invoker"; // üëà S·ª≠a th√†nh ƒë∆∞·ªùng d·∫´n t∆∞∆°ng ƒë·ªëi


import "google/protobuf/struct.proto";

service Invoker {
  rpc Invoke (InvokeRequest) returns (InvokeReply);
}

message InvokeRequest {
  string packagePath = 1;
  string functionName = 2;
  google.protobuf.Struct params = 3;
}
message AnyList {
    repeated google.protobuf.Any values = 1;
}
message InvokeReply {
  google.protobuf.Struct result = 1;
}
/*
$env:PATH += ";D:\protoc-31.1-win64\bin"
protoc --go_out=. --go-grpc_out=.  caller/caller.proto
*/